<resources>
    <string name="app_name">Save Animals</string>
    <string name="bonjour_bienvenue">Bonjour,\nBienvenue !</string>
    <string name="connectez_vous_pour_continuer">Connectez-vous pour continuer</string>
    <string name="nom_dutilisateur">Nom d\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="obligatoire">Obligatoire*</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="connexion">CONNEXION</string>
    <string name="sinscrire_maintenant">S\'inscrire maintenant</string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="inscrivez_vous_pour_commencer">Inscrivez-vous pour commencer</string>
    <string name="nom_et_prenom">Nom et prénom</string>
    <string name="email">Adresse email</string>
    <string name="phone">+216</string>
    <string name="sinscrire">S\'INSCRIRE</string>
    <string name="vous_avez_deja_un_compte_sc">Vous avez déjà un compte ? Se connecter</string>
    <string name="proteger_lanimal">Protéger\nL\'animal</string>
    <string name="aider_les_animaux">aider les animaux</string>
    <string name="connectez_vous_maintenant">Connectez vous maintenant</string>
    <string name="inscription_r_ussie">Inscription réussie !</string>
    <string name="text_de_bienvenue"><![CDATA[<< il sera plus facile d’améliorer les conditions de vie de tous les animaux sans exception ! >>]]></string>
    <string name="welcome_to_our_community">bienvenue dans notre communauté !</string>
    <string name="navigation_drawer_open">ouvrire le tiroir de navigation</string>
    <string name="navigation_drawer_close">fermer le tiroir de navigation</string>
    <string name="aide_maintenant">Aide maintenant !</string>
    <string name="n_h_sitez_pas_a_aider">N\'hésitez pas a aider</string>
    <string name="accuil">Accueil</string>
    <string name="v_t_rinaire_le_plus_proche">Vétérinaire le plus proche</string>
    <string name="conseils">Conseils</string>
    <string name="organismes_sociaux">Organismes sociaux</string>
    <string name="campagnes_d_aide">Campagnes d\'aide à venir</string>
    <string name="num_ros_d_urgence">Numéros d\'urgence</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="signaler_un_probl_me">Signaler un problème</string>
    <string name="contactez_nous">Contactez-nous</string>
    <string name="profil">Profil</string>
    <string name="connexion2">Connexion</string>
    <string name="mon_profil">Mon profil</string>
    <string name="veuille_reessayer">Échec de connexion</string>
    <string name="exit_app">Voulez-vous vraiment fermer l\'application?</string>
    <string name="exit_title">Fermer L\'application ?</string>
    <string name="exit_positive">Fermer</string>
    <string name="exit_neg">Annuler</string>
    <string name="dec_msg">Êtes-vous sûr de vouloir vous déconnecter ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="reessayer">Réessayer</string>
    <string name="concte_a_internet">Veuillez vous connecter à internet pour continuer !</string>
    <string name="connecte">Connecte</string>
    <string name="cnc_echec">Échec de connexion</string>
    <string name="verifier">Verifier vos donnes est ressayer</string>
    <string name="empty_error">le champ ne peut pas etre vide</string>
    <string name="wait_spaces_err">les espaces blancs ne sont pas autorises</string>
    <string name="length_err">Nom d\'utilisateur trop long</string>
    <string name="email_forme_err">Adresse e-mail invalide</string>
    <string name="phone_numb_err">le numero de telephone contient 8 chiffres</string>
    <string name="short_pswd_err">le mot de passe est trop courte</string>
    <string name="useless_pswd_err">le mot de passe est trop faible</string>
    <string name="permission_acc">permission accordée</string>
    <string name="tunisia">Tunisia</string>
    <string name="retour_msg">Voulez-vous revenir à la page d\'accueil</string>
    <string name="retour_title">Retour ?</string>
    <string name="chargement">Chargement…</string>
    <string name="chargement_en_cour">Chargement en cours…</string>
    <string name="trouver">trouver</string>
    <string name="veterinaires">Vétérinaire</string>
    <string name="google_map_key" translatable="false">AIzaSyAADTpb30gaYtHtOrxY55ourmZt7puFmSM</string>
    <string name="souviens_toi_de_moi">MEMORISER</string>
    <string name="memoriser">Mémoriser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">NOM ET PRÉNOM</string>
    <string name="nom_dutilisateur2">nom d\'utilisateur</string>
    <string name="mettre_jour">METTRE À JOUR</string>
    <string name="nombre_d_aides">nombre d\'aides</string>
    <string name="appel">appel !</string>
    <string name="fb_txt">Ce groupe est présent afin de créer une association pour soigner les animaux. Nous espérons que tout le monde participe et s\'engage sérieusement, c\'est une tâche n\'est pas facile, elle nous exige du temps, de la ponctualité, de la disponibilité, et surtout de la patience. Aussi nous espérons que, à travers de ce groupe, nous pouvons continuer notre mission meme si nous ne parvenons pas à créer notre association ou en attendant à la réaliser, nous pouvons aider et soigner les animaux surtout les chats et les chiens errants on peut limiter leur prolifération dans les rues, en contribuant à trouver des adoptants. Enfin ne oubliez pas que cette mission est une mission humanitaire, nous les offrons sans aucun profits.</string>
    <string name="fb_nom">SOS animaux Tunisie</string>
    <string name="members">Groupe Public·327,0 K membres</string>
    <string name="rejoignez_nous">Rejoignez-nous !</string>
    <string name="partage">Partage</string>
    <string name="partage_error_text">pas des application de partage dans ce telephone</string>
    <string name="gps_permission">Permission Guaranteed</string>
    <string name="rappelle_moi">rappelle moi</string>
    <string name="n_achetez_pas_d_animaux_adoptez">\"N\'achetez pas d\'animaux\"\nAdoptez !</string>
    <string name="association_pat">Association PAT</string>
    <string name="sos_animaux_tunisie">SOS Animaux Tunisie</string>
    <string name="societe_chiens">Societe Chiens</string>
    <string name="vous_pouvez_demander_l_aide_de_ces_organisations">Vous pouvez demander l\'aide de ces organisations :</string>
    <string name="av_txt">L\'importance de la protection des animaux On entend parler continuellement des espèces menacées et de la nécessité de les aider à survivre. Dans un premier temps, ce type de nouvelles nous alarment, Après tout, nous, les humains, . L\'espèce la plus \"avancée\" et \"développée\" de la planète semble ne pas se rendre compte que son besoin grandissant de ressources, d\'espaces et de pouvoir est en train de l\'autodétruire  A continuation nous allons énumérer les principales raisons pour lesquelles il est important d\'aider et protéger les animaux.</string>
    <string name="ges_txt">Avoir un animal dans sa vie signifie avoir de la compagnie. Votre chien ou votre chat sera toujours là pour vous, sans vous juger sans porter de jugement sur ce que vous faites. Ils ont un amour inconditionnel envers leurs maîtres.  Avantages pour les enfants d’avoir un animal de compagnie Les animaux peuvent être tout particulièrement des bons compagnons pour les enfants. Si un enfant a des difficultés à s’exprimer devant une personne, il le fera plus facile</string>
    <string name="prot_txt">La vie animale constitue un réseau irremplaçable d\'espèces, interconnectées et avec lesquelles nous interagissons. Parce que la vie animale fournit des services naturels essentiels aux humains : ressources médicinales, nourriture et patrimoine naturel. Parce que la biodiversité est saine pour les écosystèmes. Les animaux et les végétaux ont le droit à la vie, à l\'amour et au respect.</string>
    <string name="importances">Importances</string>
    <string name="comment_proteger">Comment proteger?</string>
    <string name="bienfaits">Bienfaits</string>
    <string name="recuperer">RECUPERER</string>
    <string name="email_enregistration">Email n\'est pas enregistré</string>
</resources>