<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="#DBE5AC0F"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start">

                <ImageView
                    android:id="@+id/login_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="?attr/homeAsUpIndicator"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="152dp"
                android:layout_height="104dp"
                android:layout_gravity="start|top"
                android:paddingStart="1dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:pointerIcon="arrow"
                android:rotation="0"
                android:rotationY="0"
                android:src="@drawable/logim2"
                android:transitionName="logo_image"
                android:layout_marginTop="-20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="1dp"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="33dp"
            android:fontFamily="@font/bungee"
            android:text="@string/bienvenue"
            android:textSize="34sp"
            android:transitionName="logo_text" />

        <TextView
            android:id="@+id/slogan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="1dp"
            android:layout_marginTop="-20dp"
            android:text="@string/inscrivez_vous_pour_commencer"
            android:textSize="16sp"
            android:layout_marginBottom="-15dp"
            android:transitionName="logo_desc" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom_et_prenom"
            android:textColor="#C9000000"
            android:textColorHint="@color/cardview_shadow_start_color"
            app:boxStrokeColor="#9E7400"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:helperText="@string/obligatoire"
            app:hintTextColor="#9E7400">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user_name"
                android:drawablePadding="5dp"
                android:drawableTint="#CC9B09"
                android:fontFamily="@font/muli"
                android:inputType="text"
                android:textColorHighlight="#FF6B00"
                android:textColorLink="#FF5E5151"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                android:textColor="@color/black2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:hint="@string/nom_dutilisateur"
            android:textColor="#C9000000"
            android:textColorHint="@color/cardview_shadow_start_color"
            android:transitionName="username_tran"
            app:boxStrokeColor="#9E7400"
            app:boxStrokeWidthFocused="2dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:endIconMode="clear_text"
            app:helperText="@string/obligatoire"
            app:hintTextColor="#9E7400">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="5dp"
                android:drawableTint="#CC9B09"
                android:fontFamily="@font/muli"
                android:inputType="text"
                android:textColorHighlight="#FF6B00"
                android:textColorLink="#FF5E5151"
                android:textColor="@color/black2"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:hint="@string/email"
            android:textColor="#C9000000"
            android:textColorHint="@color/cardview_shadow_start_color"
            app:boxStrokeColor="#9E7400"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:helperText="@string/obligatoire"
            app:hintTextColor="#9E7400">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:drawableTint="#CC9B09"
                android:fontFamily="@font/muli"
                android:inputType="textEmailAddress"
                android:textColorHighlight="#FF6B00"
                android:textColorLink="#FF5E5151"
                android:textColor="@color/black2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:hint="@string/phone"
            android:textColor="#C9000000"
            android:textColorHint="@color/cardview_shadow_start_color"
            app:boxStrokeColor="#9E7400"
            app:boxStrokeWidthFocused="2dp"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:endIconMode="clear_text"
            app:helperText="@string/obligatoire"
            app:hintTextColor="#9E7400">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/stat_sys_phone_call"
                android:drawablePadding="5dp"
                android:drawableTint="#CC9B09"
                android:fontFamily="@font/muli"
                android:inputType="number"
                android:textColorHighlight="#FF6B00"
                android:textColorLink="#FF5E5151"
                android:textColor="@color/black2"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneNo"
            android:hint="@string/mot_de_passe"
            android:textColor="#C9000000"
            android:textColorHint="@color/cardview_shadow_start_color"
            android:transitionName="password_tran"
            app:boxStrokeColor="#9E7400"
            app:boxStrokeWidthFocused="2dp"
            app:helperText="@string/obligatoire"
            app:hintTextColor="#9E7400"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:textColor="@color/black2"
                android:drawableTint="#CC9B09"
                android:fontFamily="@font/muli"
                android:inputType="textPassword"
                android:textColorHighlight="#FF6B00"
                android:textColorLink="#FF5E5151" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/white_cercle"
            android:elevation="8dp"
            android:padding="13dp"
            android:visibility="invisible">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:weightSum="3">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="#DAA40F"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:onClick="letTheUserSignedUp"
            android:text="@string/sinscrire"
            android:textSize="13sp"
            android:transitionName="button_tran"
            android:textColor="@color/black2"
            app:cornerRadius="6dp" />

        <Button
            android:id="@+id/se_connecter"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:layout_marginTop="-4dp"
            android:text="@string/vous_avez_deja_un_compte_sc"
            android:textSize="13sp"
            android:textColor="@color/black2"
            android:transitionName="login_signup_tran" />

    </LinearLayout>

</LinearLayout>